--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.3.1')
 
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-messaging'
+
 
     // FIREBASE UI
     implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
