--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,13 @@
         <activity
             android:name=".ui.WebView.WebView"
             android:exported="true" />
+        <!-- NOTIFICATION SERVICE -->
+        <service
+            android:name=".notification.NotificationService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
