--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,4 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
-String API_KEY = AIzaSyC77ax8lhHQbeqgqiqJ7rqhJfCdEWE4FCk;
+API_KEY = "AIzaSyC77ax8lhHQbeqgqiqJ7rqhJfCdEWE4FCk"
